--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,16 @@ dependencies = [
     "yarl (==1.20.1)"
 ]
 
+[tool.poetry]
+name = "pyvkpns"
+version = "0.1.0"
+description = "Client for sending push notifications via RuStore (VKPNS)"
+authors = ["Timofei Ivankov <playboicartina@gmail.com>"]
+readme = "README.md"
+license = "MIT"
+homepage = "https://github.com/deadlovelll/pyvkpns"
+repository = "https://github.com/deadlovelll/pyvkpns"
+keywords = ["push", "notifications", "rustore", "vk", "client"]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
