--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ license = "MIT"
 homepage = "https://github.com/deadlovelll/pyvkpns"
 repository = "https://github.com/deadlovelll/pyvkpns"
 keywords = ["push", "notifications", "rustore", "vk", "client"]
+packages = [
+    { include = "pyvkpns", from = "src" }
+]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
